Fix overflow/scroll bug in options page.

--- a/options/css/style.css
+++ b/options/css/style.css
@@ -107,3 +107,7 @@ canvas {
 	margin-bottom: 15px;
 	border-bottom: 1px solid #eee;
 }
+
+.tab-content {
+	overflow: inherit;
+}
